--- a/css/reset.css
+++ b/css/reset.css
@@ -2,4 +2,13 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    border: none;
+}
+
+body{
+    font-family: "Fira Code", Arial, Helvetica, sans-serif;
+}
+
+button{
+    font-family: "Fira Code", Arial, Helvetica, sans-serif;
 }
