feat: "Create the -second variation to title"

--- a/css/components/title.css
+++ b/css/components/title.css
@@ -4,3 +4,9 @@
     font-size: 40px;
     color: #FF6B81;
 }
+
+.title.-second{
+    color: #FFF;
+    text-align: center;
+    text-shadow: none;
+}
