refactor:  "Change title to main-title"

--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -1,11 +1,10 @@
-.title{
-    font-family: "Fira Code", sans-serif;
+.main-title{
     text-shadow: 3px 3px 0px #2e2e2e;;
     font-size: 40px;
     color: #FF6B81;
 }
 
-.title.-second{
+.main-title.-second{
     color: #FFF;
     text-align: center;
     text-shadow: none;
