--- a/css/components/tec-skill.css
+++ b/css/components/tec-skill.css
@@ -1,17 +1,24 @@
 .tec-skill{
-    font-size: 20px;
+    font-size: 25px;
     color: #fff;
     display: flex;
+    align-items: center;
 }
 
 .tec-skill .icon{
-    margin-top: 5px;
     margin-right: 15px;
-    width: 70px;
+    width: 90px;
+    background-color: #fff;
+    border: 2px solid #000;
+    border-radius: 50%;
 }
 
 .tec-skill .description-skill{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.tec-skill .title{
+    margin-bottom: 16px;
 }
