--- a/css/components/section.css
+++ b/css/components/section.css
@@ -8,3 +8,11 @@
 .section .main-title{
     margin-bottom: 50px;
 }
+
+.section.-bgBlack{
+    background-color: #000;
+}
+
+.section.-bdFirst{
+    border-color: #F25A70;
+}
