--- a/css/components/main-carousel.css
+++ b/css/components/main-carousel.css
@@ -24,6 +24,7 @@
     top: 35px;
     border: 3px dashed #000;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .main-carousel .button-arrow{
@@ -37,4 +38,14 @@
 
 .main-carousel .button-arrow.-right{
     right: 15px;
+}
+
+.main-carousel .items{
+    width: 100%;
+    overflow: hidden;
+}
+
+.main-carousel .elements{
+    display: flex;
+    justify-content: space-between;
 }
