--- a/css/components/node-card.css
+++ b/css/components/node-card.css
@@ -35,5 +35,6 @@
 }
 
 .node-card.current-item{
-    transform: translate(5px, 2px)
+    transform: translate(5px, 2px);
+    text-shadow: 1px 1px 5px #000;
 }
