--- a/css/components/main-description.css
+++ b/css/components/main-description.css
@@ -1,6 +1,10 @@
 .main-description{
     color: #FFF;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 300;
     line-height: 1.3;
+    text-align: justify;
+    padding: 30px;
+    margin: auto;
+    width: 80%;
 }
